; ModuleID = '/home/carl/AnghaBench/php-src/ext/sockets/extr_conversions.c_accounted_emalloc.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/sockets/extr_conversions.c_accounted_emalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, %struct.TYPE_3__*)* @accounted_emalloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @accounted_emalloc(i64 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i8* @emalloc(i64 %6)
  store i8* %7, i8** %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = call i32 @zend_llist_add_element(i32* %9, i8** %5)
  %11 = load i8*, i8** %5, align 8
  ret i8* %11
}

declare dso_local i8* @emalloc(i64) #1

declare dso_local i32 @zend_llist_add_element(i32*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
